--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </ul>
         </nav>
         <div class="right_block">
-            <div class="av" title="Name"><span>D</span></div>
+            <div class="av" title="Some Name"><span>D</span></div>
             <div class="light">
                 <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13.6305 6.80396C9.86525 6.80396 6.80206 9.86774 6.80206 13.633C6.80206 17.3983 9.86525 20.4621 13.6305 20.4621C17.3952 20.4621 20.459 17.3989 20.459 13.633C20.459 9.86714 17.3952 6.80396 13.6305 6.80396Z" fill="#805AD5"/>
