--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Portfolio.png" alt="Portfolio">
-                    Portfolio
+                    <span>Portfolio</span>
                     <img src="img/Nav_icone/arrow.png" alt="Arrow">                       
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Pricing.png" alt="Pricing">                        
-                    Pricing
+                    <span>Pricing</span>
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Marketplace.png" alt="Marketplace">                         
-                    Marketplace
+                    <span>Marketplace</span>
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Futures.png" alt="Futures">                       
-                    Futures
+                    <span>Futures</span>
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Settings.png" alt="Settings">                      
-                    Settings
+                    <span>Settings</span>
                     <img src="img/Nav_icone/arrow.png" alt="Arrow">                        
                 </a></li>
             </ul>
