--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="#">
                     <img src="img/Nav_icone/Home.png" alt="Home">
-                    Home
+                    <span>Home</span>
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Portfolio.png" alt="Portfolio">
