--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
             <ul>
                 <li><a href="#">
                     <img src="img/Nav_icone/Home.png" alt="Home">
-                    <span>Home</span>
+                    Home
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Portfolio.png" alt="Portfolio">
-                    <span>Portfolio</span>
+                    Portfolio
                     <img src="img/Nav_icone/arrow.png" alt="Arrow">                       
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Pricing.png" alt="Pricing">                        
-                    <span>Pricing</span>
+                    Pricing
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Marketplace.png" alt="Marketplace">                         
-                    <span>Marketplace</span>
+                    Marketplace
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Futures.png" alt="Futures">                       
-                    <span>Futures</span>
+                    Futures
                 </a></li>
                 <li><a href="#">
                     <img src="img/Nav_icone/Settings.png" alt="Settings">                      
-                    <span>Settings</span>
+                    Settings
                     <img src="img/Nav_icone/arrow.png" alt="Arrow">                        
                 </a></li>
             </ul>
