--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         </div>
                     </section>
 
-                    <div class="section_block mostUsableExchanges">
+                    <section class="section_block mostUsableExchanges">
                         <div class="h2_btn">
                             <h2>Most usable exchanges</h2>
                             <button>See more</button>
@@ -337,9 +337,9 @@
                                 <span>Huobi</span>
                             </div>
                         </div>
-                    </div>
+                    </section>
 
-                    <div class="section_block coins">
+                    <section class="section_block coins">
                         <div class="h2_btn">
                             <h2>Coins</h2>
                             <button>See more</button>
@@ -366,11 +366,11 @@
                                 <li><button>All</button></li>
                             </ul>
                         </div>
-                    </div>
+                    </section>
                 </div>
 
                 <div class="center_block">
-                    <div class="section_block av_D">
+                    <section class="section_block av_D">
                         <div class="av_block">
                             <div class="av">
                                 <span>d</span>
@@ -438,9 +438,9 @@
                             <div class="eq_columns" style="--translateY: 35%"><span></span></div>
                             <div class="eq_columns" style="--translateY: 50%"><span></span></div>
                         </div>
-                    </div>
+                    </section>
 
-                    <div class="section_block analytics">
+                    <section class="section_block analytics">
                         <div class="h2_btn">
                             <h2>Analytics</h2>
                             <button>See more</button>
@@ -469,9 +469,9 @@
                                 <span class="right">$12</span>
                             </button>
                         </div>
-                    </div>
+                    </section>
 
-                    <div class="section_block futures">
+                    <section class="section_block futures">
                         <div class="h2_btn">
                             <h2>Futures</h2>
                             <button>See more</button>
@@ -521,11 +521,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
                 </div>
 
                 <div class="bottom_block">
-                    <div class="section_block Holdings">
+                    <section class="section_block Holdings">
                         <div class="h2_btn">
                             <h2>Holdings</h2>
                             <button>See more</button>
@@ -600,7 +600,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
                 </div>
             </div>
         </div>
