--- a/index.html
+++ b/index.html
@@ -191,7 +191,22 @@
                         </div>
                     </div>
                 </div>
+
+
+                <div class="ads">
+                    <div class="close_and_p">
+                        <div class="close">
+                            <svg width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8.59047 0.213257L5.00961 3.79412L1.42875 0.213257L0.0223389 1.61967L3.6032 5.20052L0.0223389 8.78138L1.42875 10.1878L5.00961 6.60693L8.59047 10.1878L9.99687 8.78138L6.41602 5.20052L9.99687 1.61967L8.59047 0.213257Z" fill="#F2F2F2"/>
+                            </svg>
+                        </div>
+                        <p>Your free trial has been started․ There are <span>5 days</span> left.</p>
+                    </div>
+                    <button>Subscribe</button>
+                </div>
             </aside>
+
+            
         
             <div class="main_right_block">
                 <div class="top_block">
@@ -604,18 +619,6 @@
                 </div>
             </div>
         </div>
-
-        <aside class="ads">
-            <div class="close_and_p">
-                <div class="close">
-                    <svg width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M8.59047 0.213257L5.00961 3.79412L1.42875 0.213257L0.0223389 1.61967L3.6032 5.20052L0.0223389 8.78138L1.42875 10.1878L5.00961 6.60693L8.59047 10.1878L9.99687 8.78138L6.41602 5.20052L9.99687 1.61967L8.59047 0.213257Z" fill="#F2F2F2"/>
-                    </svg>
-                </div>
-                <p>Your free trial has been started․ There are <span>5 days</span> left.</p>
-            </div>
-            <button>Subscribe</button>
-        </aside>
     </main>
 </body>
 </html>
